# graphgolf-cuda

./: CMakeLists.txt
cppcode/: Annealing.cpp  HillClimb.cpp  HillClimbWVC.cpp  HillClimb_cpu.cpp  RNDboxgen.cpp  RNDpiecegen.cpp  annealing.cpp  annealingEXP.cpp  annealingEXP_cpu.cpp  annealingNR.cpp  annealingWVC.cpp  annealing_cpu.cpp  arrayQueue.hpp  aspl_cuda.cpp  beamer.cpp  box.hpp  box2aspl.cpp  box2graph.cpp  boxHillClimb.cpp  cpuASPLbox.cpp  cpuASPLpiece.cpp  cpuASPLqueue.cpp  graph.hpp  initTemp.cpp  main.cpp  part.hpp  piece.hpp  piece2aspl.cpp  piece2graph.cpp  pieceHillClimb.cpp  pieceHillClimb_cpu.cpp  pieceannealing.cpp  pieceannealing_cpu.cpp  pieceinitTemp.cpp
cudacode/: CMakeLists.txt  cudaASPLbeamer.cu  cudaASPLbeamer.hpp  cudaASPLbox.cu  cudaASPLbox.hpp  cudaASPLconv.cu  cudaASPLconv.hpp  cudaASPLgraph.cu  cudaASPLgraph.hpp  cudaASPLpiece.cu  cudaASPLpiece.hpp
